2010-12-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/parser/Makefile.am: Compile libparser.a.
	* configure.ac: Likewise.
	* src/Makefile.am: Likewise.

	* src/tests/Makefile.am: Fixed FTBFS on linux.
	Link testClaspResultOnlineParser and testBlockingClasp with libparser.a.

	* src/tests/testQueryPlan.cpp: Fixed FTBFS of testsuite.
	* src/tests/testMatch.cpp: Likewise.
	* src/tests/testGraphProp.cpp: Likewise.
	* src/tests/testClaspResultOnlineParser.cpp: Likewise.
	* src/tests/testBlockingClasp.cpp: Likewise.
	* src/tests/Makefile.am: Likewise.

	* include/dyndmcs/Match.h: Include missing list and vector.

2010-12-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcs/Makefile.am: Move cache to dmcs directory.
	* src/dmcs/Cache.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* include/dmcs/Cache.h: Likewise.
	* include/Makefile.am: Likewise.
	* include/dmcs/Makefile.am: Likewise.

	* src/Makefile.am (dmcsd_LDADD): Reorder to fix FTBFS on linux.

2010-12-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/Handler.h: Setup MQs, threads.
	* include/network/Handler.tcc: Likewise.

	* include/dmcs/StreamingDMCS.h: Start to integrate relsat.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

	* include/Theory.h: Add some comments.

	* include/CommandTypeFactory.h: Add some dummy MQs to simulate
	later MQGateWay.

	* src/dmcs/Makefile.am (libdmcs_a_SOURCES): Add StreamCommandType.cpp.

	* src/dmcs/StreamingCommandType.cpp: New file.

	* include/CommandType.h: Add methods for creating threads.
	* include/dyndmcs/InstantiatorCommandType.h: Likewise.
	* include/dyndmcs/DynamicCommandType.h: Likewise.
	* include/dmcs/StreamingCommandType.h: Likewise.
	* include/dmcs/PrimitiveCommandType.h: Likewise.
	* include/dmcs/OptCommandType.h: Likewise.

2010-12-20  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/StreamingDMCS.cpp: New file.