@@ -2,8 +2,9 @@ AUTOMAKE_OPTIONS = gnu
 
 # global preprocessor flags
 AM_CPPFLAGS = \
-    -I$(top_srcdir)/include \
-    $(BOOST_CPPFLAGS)
+	-I$(top_srcdir)/include \
+	$(BM_CPPFLAGS) \
+	$(BOOST_CPPFLAGS)
 
 # global linker flags
 AM_LDFLAGS = \
